--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple Bot chat messenger using personal account. Made by NTKhang.",
   "main": "index.js",
   "engines": {
-    "node": ">=18.18.0 <19.0.0",
+    "node": "16.x",
+    "npm": ">=7.0.0"
   },
   "dependencies": {
     "@distube/ytdl-core": "^4.13.3",
@@ -15,17 +16,20 @@
     "child_process": "^1.0.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
+    "discord-image-generation": "^1.4.25",
     "eta": "^1.12.3",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "express-rate-limit": "^6.5.2",
     "express-session": "^1.17.3",
     "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
     "fs-extra": "^11.1.0",
     "googleapis": "^100.0.0",
     "gradient-string": "^2.0.2",
     "graphql-query-to-json": "^2.0.1",
     "https": "^1.0.0",
+    "jimp": "^0.22.12",
     "jsonlint-mod": "^1.7.6",
     "moment-timezone": "^0.5.34",
     "mongoose": "^6.3.1",
@@ -36,17 +40,22 @@
     "ora": "^5.4.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "pastebin-api": "^7.0.0",
     "path": "^0.12.7",
+    "prodia.js": "^2.1.5",
     "qrcode-reader": "^1.0.4",
     "qs": "^6.11.0",
     "request": "^2.88.2",
     "searchitunes": "^2.5.4",
     "sequelize": "^6.19.0",
+    "similarity": "^1.2.1",
     "socket.io": "^4.5.1",
     "sqlite3": "^5.0.5",
+    "srod-v2": "^1.0.2",
     "tinyurl": "^1.1.7",
     "totp-generator": "^0.0.13",
-    "websocket-stream": "^5.5.2"
+    "websocket-stream": "^5.5.2",
+    "yt-search": "^2.10.4"
   },
   "scripts": {
     "start": "set NODE_ENV=&& node index.js",
